migrating to using JDK-22ea